--- a/Back/viajerasapp-boot/src/main/resources/application.yml
+++ b/Back/viajerasapp-boot/src/main/resources/application.yml
@@ -65,7 +65,7 @@ server:
 spring:
    datasource:
       driver-class-name: org.postgresql.Driver
-      jdbc-url: jdbc:postgresql://45.84.210.174:65432/2023_BFS_3_G4
+      jdbc-url: jdbc:postgresql://db:5432/2023_BFS_3_G4
       username: 2023_BFS_3_G4
       password: b2f34VKzTvt2
       initial-size: 10
